--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ ORACLE_PRIVATE_KEY=oracle_private_key_here
 ORACLE_ADDRESS=oracle_public_address_here
 
 # ElevenLabs / AI keys
-ELEVEN_API_KEY=sk_88f8e55715b01e43e8c8eb584c0e4e3e7a1b27099feec086
+ELEVEN_API_KEY=sk_...............1b27099feec086
 WORKERS_AI_KEY=your_cloudflare_workers_ai_key
 AIMLAPI_KEY=your_aimlapi_key
 WORKERS_AI_ACCOUNT_ID=your_account_id_here
